kagent/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent
  namespace: kagent
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent
            port:
              number: 80
